--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
