--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@nextui-org/react": "^2.4.2",
     "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
