--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
