--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@headlessui/react": "^2.1.1",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
