--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@heroicons/react": "^2.1.4",
     "@nextui-org/react": "^2.4.2",
     "@vercel/postgres": "^0.9.0",
+    "apexcharts": "^3.49.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "next": "14.2.4",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
